$Id: History,v 1.32 2001-05-25 13:38:51 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

25th May 2001  John Allison  (greps-V03-01-02)
- Added GetSurfaceArea() and GetVolume() to HepPolyhedron (Evgeni).
- Bug fix in BooleanProcessor.src (Guy, Evgeni).

3rd May 2001  John Allison  (greps-V03-01-01)
- Replaced G4RWTValOrderedVector by G4std::vector in G4PlacedPolyhedron
  and G4Point3DList.  Forces co-working tags in categories:
    geommng-V03-01-02
    tracking-V03-01-00
    vis-V03-01-01

11th April 2001  John Allison  (greps-V03-01-00)
- Some code has been added to cover unforeseen earlier situation
  during preselection of faces without intersection (Evgeni).
- Moved #include <CLHEP/config/TemplateFunctions.h> and others from
  HepPolyhedron.h to HepPolyhedron.cc (Evgeni).
- Fixed stupid warnings about possible use of uninitialized variables (Evgeni).
- Made GetNumberOfRotationSteps() static and public (John).

6th February 2001  John Allison  (greps-V03-00-01)
- More tidying for CodeWizard.  Added virtual destructors to
  HepPolyhedronBox, etc.  Also made all constructors non-inline.

3rd February 2001  John Allison  (greps-V03-00-00)