@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2001-05-25 13:38:51 johna Exp $
+$Id: History,v 1.33 2001-07-22 00:49:32 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+21st July May 2001  John Allison  (greps-V03-02-00)
+- Added G4Scale.
 
 25th May 2001  John Allison  (greps-V03-01-02)
 - Added GetSurfaceArea() and GetVolume() to HepPolyhedron (Evgeni).
